--- a/relinksys/web/src/app/sale/billing/billing.component.html
+++ b/relinksys/web/src/app/sale/billing/billing.component.html
@@ -2191,14 +2191,14 @@
 
                                                     <div class="col-xl-3 col-lg-3  col-md-6 col-sm-6 col-6 mb-0">
                                                         <mat-form-field class="example-full-width mb-0">
-                                                            <mat-label>Prism_R</mat-label>
+                                                            <mat-label>Prism_R/DBL</mat-label>
                                                             <input matInput name="R_Prism"
                                                                 [(ngModel)]="spectacle.R_Prism" />
                                                         </mat-form-field>
                                                     </div>
                                                     <div class="col-xl-3 col-lg-3  col-md-6 col-sm-6 col-6 mb-0">
                                                         <mat-form-field class="example-full-width mb-0">
-                                                            <mat-label>Prism_L</mat-label>
+                                                            <mat-label>Prism_L/ED</mat-label>
                                                             <input matInput name="L_Prism"
                                                                 [(ngModel)]="spectacle.L_Prism" />
                                                         </mat-form-field>
@@ -2212,21 +2212,21 @@
                                                     </div>
                                                     <div class="col-xl-3 col-lg-3  col-md-6 col-sm-6 col-6 mb-0">
                                                         <mat-form-field class="example-full-width mb-0">
-                                                            <mat-label>RefractiveIn</mat-label>
+                                                            <mat-label>DIA/RefractiveIn</mat-label>
                                                             <input matInput name="RefractiveIndex"
                                                                 [(ngModel)]="spectacle.RefractiveIndex" />
                                                         </mat-form-field>
                                                     </div>
                                                     <div class="col-xl-3 col-lg-3  col-md-6 col-sm-6 col-6 mb-0">
                                                         <mat-form-field class="example-full-width mb-0">
-                                                            <mat-label>Frame</mat-label>
+                                                            <mat-label>Frame/A Size</mat-label>
                                                             <input matInput name="Frame"
                                                                 [(ngModel)]="spectacle.Frame" />
                                                         </mat-form-field>
                                                     </div>
                                                     <div class="col-xl-3 col-lg-3  col-md-6 col-sm-6 col-6 mb-0">
                                                         <mat-form-field class="example-full-width mb-0">
-                                                            <mat-label>Lens</mat-label>
+                                                            <mat-label>Lens/B Size</mat-label>
                                                             <input matInput name="Lens" [(ngModel)]="spectacle.Lens" />
                                                         </mat-form-field>
                                                     </div>
