--- a/relinksys/web/src/app/admin/reminder/reminder.component.html
+++ b/relinksys/web/src/app/admin/reminder/reminder.component.html
@@ -44,7 +44,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(c,'CustomerBday')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                             <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{bdayList.length - i }}</td>
                                                         <td>{{c.Name}}</td>
@@ -73,7 +73,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(s,'SupplierBday')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                            <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{bdayList.length - i }}</td>
                                                         <td>{{s.Name}}</td>
@@ -101,7 +101,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(e,'EmployeeBday')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i  *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                            <!-- <i  *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{bdayList.length - i }}</td>
                                                         <td>{{e.Name}}</td>
@@ -129,7 +129,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(f,'FitterBday')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                            <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{bdayList.length - i }}</td>
                                                         <td>{{f.Name}}</td>
@@ -157,7 +157,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(d,'DoctorBday')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                            <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{bdayList.length - i }}</td>
                                                         <td>{{d.Name}}</td>
@@ -203,7 +203,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(c,'CustomerAnniversary')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i  *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                            <!-- <i  *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{AnniversaryList.length - i }}</td>
                                                         <td>{{c.Name}}</td>
@@ -232,7 +232,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(s,'SupplierAnniversary')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                            <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{AnniversaryList.length - i }}</td>
                                                         <td>{{s.Name}}</td>
@@ -260,7 +260,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(e,'EmployeeAnniversary')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                            <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{AnniversaryList.length - i }}</td>
                                                         <td>{{e.Name}}</td>
@@ -288,7 +288,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(f,'FitterAnniversary')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                            <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{AnniversaryList.length - i }}</td>
                                                         <td>{{f.Name}}</td>
@@ -316,7 +316,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(d,'DoctorAnniversary')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                            <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{AnniversaryList.length - i }}</td>
                                                         <td>{{d.Name}}</td>
@@ -404,7 +404,7 @@
                                         <td style=" width:25%;">
                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(eye,'EyeTesting')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                            <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                            <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                         </td>
                                         <td>{{EyeTestingList.length - i }}</td>
                                         <td>{{eye.Name}}</td>
@@ -447,7 +447,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(cs,'CustomerSolution')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                            <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{SolutionList.length - i }}</td>
                                                         <td>{{cs.Name}}</td>
@@ -476,7 +476,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(ss,'SupplierSolution')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                            <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{SolutionList.length - i }}</td>
                                                         <td>{{ss.Name}}</td>
@@ -521,7 +521,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(cc,'CustomerContactlens')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                            <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{ContactLensList.length - i }}</td>
                                                         <td>{{cc.Name}}</td>
@@ -550,7 +550,7 @@
                                                         <td style=" width:25%;">
                                                             <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(sc,'SupplierContactlens')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                             <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                            <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                            <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                                         </td>
                                                         <td>{{ContactLensList.length - i }}</td>
                                                         <td>{{sc.Name}}</td>
@@ -595,7 +595,7 @@
                                             <td style=" width:25%;">
                                                 <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(Feed,'Comfort')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                 <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                             </td>
                                             <td>{{FeedBackList.length - i }}</td>
                                             <td>{{Feed.Name}}</td>
@@ -636,7 +636,7 @@
                                             <td style=" width:25%;">
                                                 <i *ngIf="this.company.WhatsappMsg == 'true'" (click)="WhatsappSend(S,'Service')" class="fa-brands fa-whatsapp fa-xl whatsappIocn"></i> 
                                                 <i class="fa-solid fa-comment-sms fa-xl ms-md-2 me-md-2 ms-1 me-1 smsIocn"></i> 
-                                                <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i>
+                                                <!-- <i *ngIf="this.company.EmailMsg == 'true'" class="fa-regular fa-envelope fa-xl emailIocn"></i> -->
                                             </td>
                                             <td>{{ServiceList.length - i }}</td>
                                             <td>{{S.Name}}</td>
